--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
 			"last 1 safari version"
 		]
 	},
-	"homepage": "https://overraddit.github.io/Baechu",
+	"homepage": "https://overraddit.github.io/Baechu/",
 	"devDependencies": {
 		"gh-pages": "^3.1.0"
 	}
