--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "3.4.3",
 		"semantic-ui-css": "^2.4.1",
-		"semantic-ui-react": "0.88.2"
+		"semantic-ui-react": "0.88.2",
+		"uuid": "^8.3.1"
 	},
 	"scripts": {
 		"start": "react-scripts start",
